codepkg/objects/CTP_CaseTypeMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store Case Type and its field mapping</description>
    <fields>
        <fullName>CTP_Case_Type__c</fullName>
        <description>Field to store case type values</description>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Origin__c</fullName>
        <description>Field to store origin value</description>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Priority__c</fullName>
        <description>Field to store priority value</description>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_RecordType__c</fullName>
        <description>Field to store record type of case</description>
        <label>RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Status__c</fullName>
        <description>Field to store Feedback Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CaseTypeMapping</label>
</CustomObject>